--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
 				<p>I am a third-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from videos for synthesis and editing.</p>
 
-				<p>I am interning at Google DeepMind, where I am privileged to work with
+				<p>I had the privilege of working as a student researcher at Google DeepMind, collaborating with
 					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>.
-					In the past, I was also fortunate to collaborate with
+					Previously, I was fortunate to work with
 					<a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe Research;
 					<a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica; 
 					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University; 
-					<a href="">Kuan-Wen Chen</a> at NCTU, Taiwan.
+					and <a href="">Kuan-Wen Chen</a> at NCTU, Taiwan.
 				</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
 			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp Email</a>
-			<a class="btn is-revealing is-header" href="https://scholar.google.com/citations?hl=en&user=9oVI7yYAAAAJ"><i class="fab fa-google"></i>&nbsp Google Scholar</a>
+			<a class="btn is-revealing is-header" href="https://scholar.google.com/citations?hl=en&user=9oVI7yYAAAAJ&view_op=list_works&authuser=1&sortby=pubdate"><i class="fab fa-google"></i>&nbsp Google Scholar</a>
 			<!-- <a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a> -->
 			<a class="btn is-revealing is-header" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&nbsp LinkedIn</a>
 
@@ -81,7 +81,7 @@
 				<p class="description">
 				  Google DeepMind<br>
 				  Student Researcher<br>
-				  Summer 2024
+				  2024
 				</p>
 			</li>
 			<li class="is-revealing is-header">
@@ -90,7 +90,7 @@
 				<p class="description">
 				  Adobe Research<br>
 				  Research Intern<br>
-				  Summer 2023
+				  2023
 				</p>
 			</li>
 			<li class="is-revealing is-header">
@@ -136,7 +136,7 @@
 			<div class="col-lg-8">
 				<p class="title"><a href="https://gen-omnimatte.github.io/">Generative Omnimatte: Learning to Decompose Video into Layers</a></p>
 				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://scholar.google.com/citations?user=gPkCTQ0AAAAJ&hl=en">Sarah Rumbley</a>, <a href="https://michalgeyer.my.canva.site/">Michal Geyer</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, <a href="https://people.csail.mit.edu/fcole/">Forrester Cole</a></p>
-				<p class="venue">arXiv 2024</p>
+				<p class="venue">arXiv preprint 2024</p>
 				<a class="btn" href="https://gen-omnimatte.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 					<a class="btn" href="https://arxiv.org/pdf/2411.16683">
