--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="is-revealing is-header">
 				<p>I am a third-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
-					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from videos for synthesis and editing.</p>
+					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from casual videos for synthesis and editing.</p>
 
 				<p>I had the privilege of working as a student researcher at Google DeepMind, collaborating with
 					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>.
