--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<img class="img-fluid" src="images/profile.png" alt="alternative" style="max-width: 60%; margin-left: 20%; margin-right: 20%;">
 				</div>
 			</div>
-			<div class="is-revealing is-header">
+			<div class="is-revealing is-header" style="text-align: justify;">
 				<p>I am a third-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from casual videos for synthesis and editing.</p>
 
@@ -75,6 +75,15 @@
 				  Today – 2022
 				</p>
 			</li>
+			<!-- <li class="is-revealing is-header"> -->
+				<!-- <span class="point"></span> -->
+				<!-- <img src="images/cornell.svg" class="logo" style="transform: scale(0.75);"/>
+				<p class="description">
+				  Cornell University<br>
+				  Visiting Student<br>
+				  Today – 2025
+				</p>
+			</li> -->
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
 				<img src="images/gdm.png" class="logo" style="transform: scale(0.81);"/>
