--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<div class="col-lg-8">
 				<p class="title"><a href="https://gen-omnimatte.github.io/">Generative Omnimatte: Learning to Decompose Video into Layers</a></p>
 				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://scholar.google.com/citations?user=gPkCTQ0AAAAJ&hl=en">Sarah Rumbley</a>, <a href="https://michalgeyer.my.canva.site/">Michal Geyer</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, <a href="https://people.csail.mit.edu/fcole/">Forrester Cole</a></p>
-				<p class="venue">arXiv preprint 2024</p>
+				<p class="venue">CVPR 2025</p>
 				<a class="btn" href="https://gen-omnimatte.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 					<a class="btn" href="https://arxiv.org/pdf/2411.16683">
