--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/casual-fvs.gif'>
+				<video class="video" style="max-width: 100%" loop playsinline autoplay muted>
+                    <source src='images/casual-fvs.mp4'>
+                </video>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://casual-fvs.github.io/">Fast View Synthesis of Casual Videos with Soup-of-Planes</a></p>
