--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@
 
 
 	<footer class="container">
+        <span style="font-size: 16px; ">I'm lucky to have an <a href="https://shujung-han.github.io">amazing wife</a> who supports me on my journey, and she is also a PhD student in Cornell InfoSci.</span>
+        <br>
+        <br>
 		<span style="font-size: 16px; ">The webpage template is borrowed from <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a>. The curriculum vitae's template is borrowed from <a href="https://sniklaus.com/welcome">Simon Niklaus</a>.</href></span>
 	</footer>
 
