--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 				</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
-			<a class="btn is-revealing is-header" href="mailto:yclee@umd.edu"><i class="fab fas fa-envelope"></i>&nbsp Email</a>
 			<a class="btn is-revealing is-header" href="https://scholar.google.com/citations?hl=en&user=9oVI7yYAAAAJ&view_op=list_works&authuser=1&sortby=pubdate"><i class="fab fa-google"></i>&nbsp Google Scholar</a>
 			<!-- <a class="btn is-revealing is-header" href="https://github.com/yaochih"><i class="fab fa-github"></i>&nbsp Github</a> -->
 			<a class="btn is-revealing is-header" href="https://www.linkedin.com/in/yao-chih-lee/"><i class="fab fa-linkedin-in"></i>&nbsp LinkedIn</a>
+			<a class="btn is-revealing is-header" onclick="copyEmail(this)" onmouseover="hoverEmail(this)" onmouseleave="leaveEmail(this)"><i class="fab fas fa-envelope"></i>&nbsp Email</a>
 
 		</div>
 		
