add generative omnimatte code&data release

--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 					<a class="btn" href="https://arxiv.org/pdf/2411.16683">
 						<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
+					<a class="btn" href="https://github.com/gen-omnimatte/gen-omnimatte-public">
+					<i class="fab fa-github"></i>&nbsp Code & Data</a>
 					<a class="btn" href="https://www.youtube.com/watch?v=SD-VCNvTBg4">
 						<i class="fab fa-youtube"></i>&nbsp Video</a>
 			</div>
