--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 	<!-- Publications -->
 
 	<div class="container">
-		<h2 class="section-title">Publications</h2>
+		<h2 class="section-title">Selected Publications</h2>
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -215,10 +215,10 @@
 					<i class="fab fas fa-list-ul"></i>&nbsp Awesome video stabilization</a>
 			</div>
 		</div>
-		<hr/>
+		<!-- <hr/> -->
 		<!-- <h2 class="section-title">Others</h2> -->
 
-		<div class="row publication">
+		<!-- <div class="row publication">
 			<div class="col-lg-4">
 				<img src='images/latent-diffusion-prior.gif'>
 			</div>
@@ -272,10 +272,11 @@
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
 					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<!-- End of publications -->
 
+	<br><br><br><br>
 	<br><br><br><br>
 
 
