--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
 				</div>
 			</div>
 			<div class="is-revealing is-header" style="text-align: justify;">
-				<p>I am a third-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
+				<p>I am a 4th-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from casual videos for synthesis and editing.</p>
 
-				<p>I had the privilege of working as a student researcher at Google DeepMind, collaborating with
+				<p>I am currently an intern at Adobe, where I have the honor of working with <a href="https://zhengqili.github.io/">Zhengqi Li</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://gabriel-huang.github.io/">Gabriel Huang</a>, <a href="https://juiwang.com/">Jui-Hsien Wang</a>, and <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>.
+					Previously, I had the privilege of working with
 					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>.
-					Previously, I was fortunate to work with
-					<a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>, and <a href="https://ztzhang.info/">Zhoutong Zhang</a> at Adobe Research;
-					<a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a> at Academia Sinica; 
-					<a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a> at National Taiwan University; 
-					and <a href="">Kuan-Wen Chen</a> at NCTU, Taiwan.
+					as a student researcher at Google DeepMind,
+					<a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, and <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a> during a prior internship at Adobe.
+				</p>
+				<p>
+					I completed my M.S. at National Taiwan University and B.S. at NCTU, advised by <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, and <a href="">Kuan-Wen Chen</a>.
 				</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
@@ -86,6 +87,15 @@
 			</li> -->
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
+				<img src="images/adobe.png" class="logo" style="transform: scale(0.75);"/>
+				<p class="description">
+				  Adobe Research<br>
+				  Research Intern<br>
+				  2025
+				</p>
+			</li>
+			<li class="is-revealing is-header">
+				<!-- <span class="point"></span> -->
 				<img src="images/gdm.png" class="logo" style="transform: scale(0.81);"/>
 				<p class="description">
 				  Google DeepMind<br>
@@ -121,7 +131,6 @@
 				</p>
 			</li>
 			<li class="is-revealing is-header">
-				<!-- <span class="point"></span> -->
 				<img src="images/nctu.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
 					National Chiao Tung University B.S.<br>
@@ -215,10 +224,10 @@
 					<i class="fab fas fa-list-ul"></i>&nbsp Awesome video stabilization</a>
 			</div>
 		</div>
-		<!-- <hr/> -->
+		<hr/>
 		<!-- <h2 class="section-title">Others</h2> -->
 
-		<!-- <div class="row publication">
+		<div class="row publication">
 			<div class="col-lg-4">
 				<img src='images/latent-diffusion-prior.gif'>
 			</div>
@@ -272,7 +281,7 @@
 				<a class="btn" href="https://arxiv.org/abs/2106.11589">
 					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 			</div>
-		</div> -->
+		</div>
 	</div>
 	<!-- End of publications -->
 
