--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="col-lg-8 is-revealing is-header">
 					<h1 class="name"><strong>Yao-Chih Lee</strong></h1>
 					<h2 class="lead">CS Ph.D. Student at the University of Maryland
-					<br/>3D Vision and Video Synthesis</h2>
+					<br/>Video Synthesis and 3D Vision</h2>
 				</div>
 				<div class="col-lg-4">
 					<img class="img-fluid" src="images/profile.png" alt="alternative" style="max-width: 60%; margin-left: 20%; margin-right: 20%;">
@@ -40,14 +40,16 @@
 				<p>I am a 4th-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
 					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from casual videos for synthesis and editing.</p>
 
-				<p>I am currently an intern at Adobe, where I have the honor of working with <a href="https://zhengqili.github.io/">Zhengqi Li</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://gabriel-huang.github.io/">Gabriel Huang</a>, <a href="https://juiwang.com/">Jui-Hsien Wang</a>, and <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>.
-					Previously, I had the privilege of working with
-					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>.
-					as a student researcher at Google DeepMind,
-					<a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, and <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a> during a prior internship at Adobe.
+				<p>My research collaborations include recent internship at Adobe (collaborating with <a href="https://zhengqili.github.io/">Zhengqi Li</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://gabriel-huang.github.io/">Gabriel Huang</a>, and <a href="https://juiwang.com/">Jui-Hsien Wang</a>)
+					and prior experiences as a student researcher at Google DeepMind (mentored by
+					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>),
+					and an earlier internship at Adobe (working with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, and <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>).
 				</p>
 				<p>
 					I completed my M.S. at National Taiwan University and B.S. at NCTU, advised by <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, and <a href="">Kuan-Wen Chen</a>.
+				</p>
+				<p>
+					<span class="emph">[New]</span> I am on the job market for a research position. Happy to connect!
 				</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
@@ -80,7 +82,7 @@
 				<p class="description">
 				  Adobe Research<br>
 				  Research Intern<br>
-				  2025
+				  2025, 2023
 				</p>
 			</li>
 			<li class="is-revealing is-header">
@@ -92,15 +94,14 @@
 				  2024
 				</p>
 			</li>
-			<li class="is-revealing is-header">
-				<!-- <span class="point"></span> -->
+			<!-- <li class="is-revealing is-header">
 				<img src="images/adobe.png" class="logo" style="transform: scale(0.75);"/>
 				<p class="description">
 				  Adobe Research<br>
 				  Research Intern<br>
 				  2023
 				</p>
-			</li>
+			</li> -->
 			<li class="is-revealing is-header">
 				<!-- <span class="point"></span> -->
 				<img src="images/Academia_Sinica.png" class="logo" style="transform: scale(0.75);"/>
@@ -136,7 +137,28 @@
 		<div class="row publication">
 			<div class="col-lg-4">
 				<!-- <img src='images/.gif'> -->
-				<video class="video" style="max-width: 100%;" loop playsinline autoplay muted>
+				<video class="video publication-visual" style="max-width: 100%;" loop playsinline autoplay muted>
+					<source src="images/edit-by-track.mp4" />
+				</video>
+			</div>
+			<div class="col-lg-8">
+				<p class="title"><a href="https://edit-by-track.github.io/">Generative Video Motion Editing with 3D Point Tracks</a> <span class="emph">(New)</span> </p> 
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://gabriel-huang.github.io/">Jiahui Huang</a>, <a href="https://juiwang.com/">Jui-Hsien Wang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://zhengqili.github.io/">Zhengqi Li</a></p>
+				<p class="venue">arXiv preprint 2025</p>
+
+				<a class="btn" href="https://edit-by-track.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+					<a class="btn" href="https://arxiv.org/pdf/xxxxxxxxx">
+						<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
+					<a class="btn" href="">
+						<i class="fab fa-youtube"></i>&nbsp Video</a>
+			</div>
+		</div>
+
+		<div class="row publication">
+			<div class="col-lg-4">
+				<!-- <img src='images/.gif'> -->
+				<video class="video publication-visual" style="max-width: 100%;" loop playsinline autoplay muted>
 					<source src="images/generative-omnimatte-thumbmail.mp4" />
 				</video>
 			</div>
@@ -157,7 +179,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<video class="video" style="max-width: 100%" loop playsinline autoplay muted>
+				<video class="video publication-visual" style="max-width: 100%" loop playsinline autoplay muted>
                     <source src='images/casual-fvs.mp4'>
                 </video>
 			</div>
@@ -176,7 +198,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/shape-aware-video-editing.gif'>
+				<img class="publication-visual" src='images/shape-aware-video-editing.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://text-video-edit.github.io/">Shape-aware Text-driven Layered Video Editing</a></p>
@@ -195,7 +217,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/deep3d-stabilizer.gif'>
+				<img class="publication-visual" src='images/deep3d-stabilizer.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://yaochih.github.io/deep3d-stabilizer.io/">3D Video Stabilization with Depth Estimation by CNN-based Optimization</a></p>
@@ -218,7 +240,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/latent-diffusion-prior.gif'>
+				<img class="publication-visual" src='images/latent-diffusion-prior.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://latent-diffusion-prior.github.io/">Text-driven Visual Synthesis with Latent Diffusion Prior</a></p>
@@ -233,7 +255,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/gcvd.gif'>
+				<img class="publication-visual" src='images/gcvd.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://arxiv.org/abs/2208.02709">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</a></p>
@@ -248,7 +270,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/pixstabnet.png'>
+				<img class="publication-visual" src='images/pixstabnet.png'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://ieeexplore.ieee.org/document/9506801">PixStabNet: Fast Deep Online Video Stabilization</a></p>
@@ -261,7 +283,7 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
-				<img src='images/part-aware-human-pose-cvprw-2021.png'>
+				<img class="publication-visual" src='images/part-aware-human-pose-cvprw-2021.png'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://arxiv.org/abs/2106.11589">Part-aware Measurement for Robust Multi-View Multi-Human 3D Pose Estimation and Tracking</a></p>
@@ -279,7 +301,7 @@
 
 
 	<footer class="container">
-        <span style="font-size: 16px; ">I'm lucky to have an <a href="https://shujung-han.github.io">amazing wife</a> who supports me on my journey, and she is also a PhD student in Cornell InfoSci.</span>
+        <span style="font-size: 16px; ">I'm lucky to have an amazing wife who supports me on my journey, and she is also a PhD student in Cornell InfoSci.</span>
         <br>
         <br>
 		<span style="font-size: 16px; ">The webpage template is borrowed from <a href="https://newtodesign.com/">New to design </a> Designed by <a href="https://dribbble.com/shots/4342703-Minimal-resume-freebie-for-junior-self-taught-people">Nicolas Meuzard</a>. The curriculum vitae's template is borrowed from <a href="https://sniklaus.com/welcome">Simon Niklaus</a>.</href></span>
