--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>),
 					and an earlier internship at Adobe (working with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, and <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>).
 				</p>
-				<p>
+				<!-- <p>
 					I completed my M.S. at National Taiwan University and B.S. at NCTU, advised by <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, and <a href="">Kuan-Wen Chen</a>.
-				</p>
+				</p> -->
 				<p>
-					<span class="emph">[New]</span> I am on the job market for a research position. Happy to connect!
+					<span class="emph">[New]</span> I am highly interested in an industrial full-time research position. Please feel free to connect.
 				</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
@@ -142,7 +142,7 @@
 				</video>
 			</div>
 			<div class="col-lg-8">
-				<p class="title"><a href="https://edit-by-track.github.io/">Generative Video Motion Editing with 3D Point Tracks</a> <span class="emph">(New)</span> </p> 
+				<p class="title"><a href="https://edit-by-track.github.io/">Generative Video Motion Editing with 3D Point Tracks</a> <span class="emph">[New]</span> </p> 
 				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://gabriel-huang.github.io/">Jiahui Huang</a>, <a href="https://juiwang.com/">Jui-Hsien Wang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://zhengqili.github.io/">Zhengqi Li</a></p>
 				<p class="venue">arXiv preprint 2025</p>
 
@@ -165,7 +165,7 @@
 			<div class="col-lg-8">
 				<p class="title"><a href="https://gen-omnimatte.github.io/">Generative Omnimatte: Learning to Decompose Video into Layers</a></p>
 				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://scholar.google.com/citations?user=gPkCTQ0AAAAJ&hl=en">Sarah Rumbley</a>, <a href="https://michalgeyer.my.canva.site/">Michal Geyer</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, <a href="https://people.csail.mit.edu/fcole/">Forrester Cole</a></p>
-				<p class="venue">CVPR 2025 <span class="emph">(Highlight presentation)</span></p>
+				<p class="venue">CVPR 2025 <span class="emph"><i>Highlight</i></span></p>
 				<a class="btn" href="https://gen-omnimatte.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
 					<a class="btn" href="https://arxiv.org/pdf/2411.16683">
