--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 				<a class="btn" href="https://edit-by-track.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
-					<a class="btn" href="https://arxiv.org/pdf/xxxxxxxxx">
+					<a class="btn" href="https://arxiv.org/pdf/2512.02015">
 						<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 					<a class="btn" href="">
 						<i class="fab fa-youtube"></i>&nbsp Video</a>
