--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="is-revealing is-header" style="text-align: justify;">
 				<p>I am a 4th-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
-					My research interests include 3D computer vision and video synthesis, particularly focusing on reconstructing real-world scenes from casual videos for synthesis and editing.</p>
+					My research interests include 3D computer vision and video synthesis, particularly focusing on leveraging generative foundation models to model dynamic 3D scenes from casually captured videos for versatile video synthesis applications.</p>
 
 				<p>My research collaborations include recent internship at Adobe (collaborating with <a href="https://zhengqili.github.io/">Zhengqi Li</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://gabriel-huang.github.io/">Gabriel Huang</a>, and <a href="https://juiwang.com/">Jui-Hsien Wang</a>)
 					and prior experiences as a student researcher at Google DeepMind (mentored by
@@ -49,7 +49,7 @@
 					I completed my M.S. at National Taiwan University and B.S. at NCTU, advised by <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, and <a href="">Kuan-Wen Chen</a>.
 				</p> -->
 				<p>
-					<span class="emph">[New]</span> I am highly interested in an industrial full-time research position. Please feel free to connect.
+					<span class="emph">[New]</span> I am seeking full-time industrial research opportunities beginning in <strong>Summer 2026</strong>. Please feel free to connect.
 				</p>
 			</div>
 			<a class="btn is-revealing is-header" href="https://yaochih.github.io/files/cv.pdf"><i class="fab fas fa-file-alt"></i>&nbsp CV</a>
@@ -240,11 +240,30 @@
 
 		<div class="row publication">
 			<div class="col-lg-4">
+				<video class="video publication-visual" style="max-width: 100%" loop playsinline autoplay muted>
+					<source src='images/tracegen.mp4'>
+				</video>
+			</div>
+			<div class="col-lg-8">
+				<p class="title"><a href="https://https://tracegen.github.io/">TraceGen: World Modeling in 3D Trace-Space Enables Learning from Cross-Embodiment Videos</a></p>
+				<p class="author"><a href="https://sjlee.cc/">Seungjae Lee*</a>, <a href="https://yoonkyojung.com/">Yoonkyo Jung*</a>, <a href="https://www.researchgate.net/scientific-contributions/Inkook-Chun-2189489123">Inkook Chun*</a>, <strong>Yao-Chih Lee</strong>, <a href="https://zikuicai.github.io/">Zikui Cai</a>, <a href="https://scaliaven.github.io/">Hongjia Huang</a>, <a href="https://aayushwhiz.github.io/">Aayush Talreja</a>, <a href="https://www.linkedin.com/in/dtdat0194/">Tan Dat Dao</a>, <a href="https://cheryyunl.github.io/">Yongyuan Liang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://furong-huang.com/">Furong Huang</a></p>
+				<p class="venue">arXiv preprint 2025</p>
+				<a class="btn" href="https://tracegen.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+				<a class="btn" href="https://arxiv.org/abs/2511.21690">
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+				<a class="btn" href="https://github.com/jayLEE0301/TraceGen">
+					<i class="fab fa-github"></i>&nbsp Code</a>
+			</div>
+		</div>
+
+		<div class="row publication">
+			<div class="col-lg-4">
 				<img class="publication-visual" src='images/latent-diffusion-prior.gif'>
 			</div>
 			<div class="col-lg-8">
 				<p class="title"><a href="https://latent-diffusion-prior.github.io/">Text-driven Visual Synthesis with Latent Diffusion Prior</a></p>
-				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a  href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <strong>Yao-Chih Lee</strong>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <strong>Yao-Chih Lee</strong>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
 				<p class="venue">arXiv preprint 2023</p>
 				<a class="btn" href="https://latent-diffusion-prior.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
