--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="is-revealing is-header" style="text-align: justify;">
 				<p>I am a 4th-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
-					My research interests include 3D computer vision and video synthesis, particularly focusing on leveraging generative foundation models to model dynamic 3D scenes from casually captured videos for versatile video synthesis applications.</p>
+					My research interests include 3D computer vision and video synthesis, particularly focusing on bridging generative foundation models with dynamic 3D modeling and controllability.</p>
 
 				<p>My research collaborations include recent internship at Adobe (collaborating with <a href="https://zhengqili.github.io/">Zhengqi Li</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://gabriel-huang.github.io/">Gabriel Huang</a>, and <a href="https://juiwang.com/">Jui-Hsien Wang</a>)
 					and prior experiences as a student researcher at Google DeepMind (mentored by
