--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 			</div>
 			<div class="is-revealing is-header" style="text-align: justify;">
 				<p>I am a 4th-year Ph.D. student at the University of Maryland College Park, advised by <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>. 
-					My research interests include 3D computer vision and video synthesis, particularly focusing on bridging generative foundation models with dynamic 3D modeling and controllability.</p>
+					My research interests include 3D computer vision and video synthesis, particularly focusing on bridging visual generative models with dynamic 3D modeling and controllability.</p>
 
-				<p>My research collaborations include recent internship at Adobe (collaborating with <a href="https://zhengqili.github.io/">Zhengqi Li</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://gabriel-huang.github.io/">Gabriel Huang</a>, and <a href="https://juiwang.com/">Jui-Hsien Wang</a>)
+				<p>My research collaborations include recent internship at Adobe (collaborating with <a href="https://zhengqili.github.io/">Zhengqi Li</a> and <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>)
 					and prior experiences as a student researcher at Google DeepMind (mentored by
-					<a href="https://research.google/people/forrestercole/">Forrester Cole</a>, <a href="https://erikalu.com/">Erika Lu</a>, <a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>, and <a href="">Sarah Rumbley</a>),
-					and an earlier internship at Adobe (working with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="http://kmatzen.com/">Kevin Blackburn-Matzen</a>, <a href="https://sniklaus.com/welcome">Simon Niklaus</a>, and <a href="https://research.adobe.com/person/jianming-zhang/">Jianming Zhang</a>).
+					<a href="https://research.google/people/forrestercole/">Forrester Cole</a> and <a href="https://erikalu.com/">Erika Lu</a>),
+					and an earlier internship at Adobe (working with <a href="https://pages.cs.wisc.edu/~fliu/">Feng Liu</a>).
 				</p>
 				<!-- <p>
 					I completed my M.S. at National Taiwan University and B.S. at NCTU, advised by <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a>, and <a href="">Kuan-Wen Chen</a>.
@@ -142,9 +142,9 @@
 				</video>
 			</div>
 			<div class="col-lg-8">
-				<p class="title"><a href="https://edit-by-track.github.io/">Generative Video Motion Editing with 3D Point Tracks</a> <span class="emph">[New]</span> </p> 
+				<p class="title"><a href="https://edit-by-track.github.io/">Generative Video Motion Editing with 3D Point Tracks</a></p> 
 				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://ztzhang.info/">Zhoutong Zhang</a>, <a href="https://gabriel-huang.github.io/">Jiahui Huang</a>, <a href="https://juiwang.com/">Jui-Hsien Wang</a>, <a href="https://joonyoung-cv.github.io/">Joon-Young Lee</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://research.adobe.com/person/eli-shechtman/">Eli Shechtman</a>, <a href="https://zhengqili.github.io/">Zhengqi Li</a></p>
-				<p class="venue">arXiv preprint 2025</p>
+				<p class="venue">CVPR 2026</p>
 
 				<a class="btn" href="https://edit-by-track.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
@@ -154,7 +154,24 @@
 						<i class="fab fa-youtube"></i>&nbsp Video</a>
 			</div>
 		</div>
-
+		<div class="row publication">
+			<div class="col-lg-4">
+				<video class="video publication-visual" style="max-width: 100%" loop playsinline autoplay muted>
+					<source src='images/tracegen.mp4'>
+				</video>
+			</div>
+			<div class="col-lg-8">
+				<p class="title"><a href="https://tracegen.github.io/">TraceGen: World Modeling in 3D Trace-Space Enables Learning from Cross-Embodiment Videos</a></p>
+				<p class="author"><a href="https://sjlee.cc/">Seungjae Lee*</a>, <a href="https://yoonkyojung.com/">Yoonkyo Jung*</a>, <a href="https://www.researchgate.net/scientific-contributions/Inkook-Chun-2189489123">Inkook Chun*</a>, <strong>Yao-Chih Lee</strong>, <a href="https://zikuicai.github.io/">Zikui Cai</a>, <a href="https://scaliaven.github.io/">Hongjia Huang</a>, <a href="https://aayushwhiz.github.io/">Aayush Talreja</a>, <a href="https://www.linkedin.com/in/dtdat0194/">Tan Dat Dao</a>, <a href="https://cheryyunl.github.io/">Yongyuan Liang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://furong-huang.com/">Furong Huang</a></p>
+				<p class="venue">CVPR 2026</p>
+				<a class="btn" href="https://tracegen.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+				<a class="btn" href="https://arxiv.org/abs/2511.21690">
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+				<a class="btn" href="https://github.com/jayLEE0301/TraceGen">
+					<i class="fab fa-github"></i>&nbsp Code</a>
+			</div>
+		</div>
 		<div class="row publication">
 			<div class="col-lg-4">
 				<!-- <img src='images/.gif'> -->
@@ -213,7 +230,38 @@
 			</div>
 		</div>
 
-		
+		<!-- <hr/> -->
+		<!-- <h2 class="section-title">Others</h2> -->
+
+		<!-- <div class="row publication">
+			<div class="col-lg-4">
+				<img class="publication-visual" src='images/latent-diffusion-prior.gif'>
+			</div>
+			<div class="col-lg-8">
+				<p class="title"><a href="https://latent-diffusion-prior.github.io/">Text-driven Visual Synthesis with Latent Diffusion Prior</a></p>
+				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <strong>Yao-Chih Lee</strong>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
+				<p class="venue">arXiv preprint 2023</p>
+				<a class="btn" href="https://latent-diffusion-prior.github.io/">
+					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
+				<a class="btn" href="https://arxiv.org/abs/2301.13173">
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+			</div>
+		</div> -->
+
+		<!-- <div class="row publication">
+			<div class="col-lg-4">
+				<img class="publication-visual" src='images/gcvd.gif'>
+			</div>
+			<div class="col-lg-8">
+				<p class="title"><a href="https://arxiv.org/abs/2208.02709">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</a></p>
+				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
+				<p class="venue">arXiv preprint 2022</p>
+				<a class="btn" href="https://arxiv.org/abs/2208.02709">
+					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+				<a class="btn" href="https://github.com/yaochih/GCVD-release">
+					<i class="fab fa-github"></i>&nbsp Code</a>
+			</div>
+		</div> -->
 
 		<div class="row publication">
 			<div class="col-lg-4">
@@ -233,57 +281,6 @@
 					<i class="fab fa-youtube"></i>&nbsp Video</a>
 				<a class="btn" href="https://github.com/yaochih/awesome-video-stabilization">
 					<i class="fab fas fa-list-ul"></i>&nbsp Awesome video stabilization</a>
-			</div>
-		</div>
-		<hr/>
-		<!-- <h2 class="section-title">Others</h2> -->
-
-		<div class="row publication">
-			<div class="col-lg-4">
-				<video class="video publication-visual" style="max-width: 100%" loop playsinline autoplay muted>
-					<source src='images/tracegen.mp4'>
-				</video>
-			</div>
-			<div class="col-lg-8">
-				<p class="title"><a href="https://https://tracegen.github.io/">TraceGen: World Modeling in 3D Trace-Space Enables Learning from Cross-Embodiment Videos</a></p>
-				<p class="author"><a href="https://sjlee.cc/">Seungjae Lee*</a>, <a href="https://yoonkyojung.com/">Yoonkyo Jung*</a>, <a href="https://www.researchgate.net/scientific-contributions/Inkook-Chun-2189489123">Inkook Chun*</a>, <strong>Yao-Chih Lee</strong>, <a href="https://zikuicai.github.io/">Zikui Cai</a>, <a href="https://scaliaven.github.io/">Hongjia Huang</a>, <a href="https://aayushwhiz.github.io/">Aayush Talreja</a>, <a href="https://www.linkedin.com/in/dtdat0194/">Tan Dat Dao</a>, <a href="https://cheryyunl.github.io/">Yongyuan Liang</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a>, <a href="https://furong-huang.com/">Furong Huang</a></p>
-				<p class="venue">arXiv preprint 2025</p>
-				<a class="btn" href="https://tracegen.github.io/">
-					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
-				<a class="btn" href="https://arxiv.org/abs/2511.21690">
-					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
-				<a class="btn" href="https://github.com/jayLEE0301/TraceGen">
-					<i class="fab fa-github"></i>&nbsp Code</a>
-			</div>
-		</div>
-
-		<div class="row publication">
-			<div class="col-lg-4">
-				<img class="publication-visual" src='images/latent-diffusion-prior.gif'>
-			</div>
-			<div class="col-lg-8">
-				<p class="title"><a href="https://latent-diffusion-prior.github.io/">Text-driven Visual Synthesis with Latent Diffusion Prior</a></p>
-				<p class="author"><a href="https://tinghliao.github.io/">Ting-Hsuan Liao</a>, <a href="http://songweige.github.io/">Songwei Ge</a>, <a href="https://twizwei.github.io/">Yiran Xu</a>, <strong>Yao-Chih Lee</strong>, <a href="https://badouralbahar.github.io/">Badour AlBahar</a>, <a href="https://jbhuang0604.github.io/">Jia-Bin Huang</a></p>
-				<p class="venue">arXiv preprint 2023</p>
-				<a class="btn" href="https://latent-diffusion-prior.github.io/">
-					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
-				<a class="btn" href="https://arxiv.org/abs/2301.13173">
-					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
-			</div>
-		</div>
-
-		<div class="row publication">
-			<div class="col-lg-4">
-				<img class="publication-visual" src='images/gcvd.gif'>
-			</div>
-			<div class="col-lg-8">
-				<p class="title"><a href="https://arxiv.org/abs/2208.02709">GCVD: Globally-Consistent Video Depth and Pose Estimation with Efficiency</a></p>
-				<p class="author"><strong>Yao-Chih Lee</strong>, <a href="https://kuan-wei-tseng.github.io/">Kuan-Wei Tseng</a>, Guan-Sheng Chen, <a href="https://imp.iis.sinica.edu.tw/">Chu-Song Chen</a></p>
-				<p class="venue">arXiv preprint 2022</p>
-				<a class="btn" href="https://arxiv.org/abs/2208.02709">
-					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
-				<a class="btn" href="https://github.com/yaochih/GCVD-release">
-					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
 		</div>
 
