--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 				<p class="venue">CVPR 2026</p>
 				<a class="btn" href="https://tracegen.github.io/">
 					<i class="fab fas fa-globe-asia"></i>&nbsp Project page</a>
-				<a class="btn" href="https://arxiv.org/abs/2511.21690">
-					<i class="ai ai-arxiv"></i>&nbsp arXiv</a>
+				<a class="btn" href="https://arxiv.org/pdf/2511.21690">
+					<i class="fas fa-file-pdf"></i>&nbsp Paper</a>
 				<a class="btn" href="https://github.com/jayLEE0301/TraceGen">
 					<i class="fab fa-github"></i>&nbsp Code</a>
 			</div>
